syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";


service Sports {
  // ListEvents returns a list of all sporting events.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

/* Requests/Responses */

// Request for ListEvents call.
message ListEventsRequest {
  ListEventsRequestFilter filter = 1;
}

// Response to ListEvents call.
message ListEventsResponse {
  repeated Event events = 1;
}

// Filter for listing events.
message ListEventsRequestFilter {
  bool visible = 1;
  string orderBy = 2;
}

/* Resources */

// An event resource.
message Event {
  // ID represents a unique identifier for the event.
  int64 id = 1;
  // Name is the official name given to the event.
  string name = 2;
  // Visible represents whether or not the event is visible.
  bool visible = 3;
  // AdvertisedStartTime is the time the event is advertised to start.
  google.protobuf.Timestamp advertised_start_time = 4;
  // Status represents the current status of the events:Open or Close.
  string status = 5;
}